<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/transaction" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

    <EditText
        android:id="@+id/edit_goal_target_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_amount"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <EditText
        android:id="@+id/edit_goal_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_description_for_your_transaction" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date" />

    <EditText
        android:id="@+id/edit_goal_deadline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_date"
        android:inputType="date" />
</LinearLayout>