<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <!-- Budget amount label and input -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/budget_amount" />

    <EditText
        android:id="@+id/add_budget_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/enter_budget_amount"
        android:inputType="numberDecimal" />

    <!-- Start date label and input -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/start_date" />

    <EditText
        android:id="@+id/add_budget_start_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:focusable="false"
        android:hint="@string/enter_start_date"
        android:inputType="date" />

    <!-- End date label and input -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/end_date" />

    <EditText
        android:id="@+id/add_budget_end_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:focusable="false"
        android:hint="@string/enter_end_date"
        android:inputType="date" />

    <!-- Budget category label and Spinner -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/budget_category" />

    <Spinner
        android:id="@+id/add_budget_category_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:spinnerMode="dropdown" />

</LinearLayout>