<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    app:cardElevation="4dp"
    app:cardCornerRadius="8dp"
    app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp">

        <!-- Budget Category Title -->
        <TextView
            android:id="@+id/budget_category_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="4dp"
            android:text="@string/budget_category"
            android:textSize="18sp"
            android:textStyle="bold" />

        <!-- Budget Category Value -->
        <TextView
            android:id="@+id/budget_category_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:text="@string/enter_budget_category"
            android:textSize="14sp" />

        <!-- Budget Amount Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="4dp"
            android:text="@string/budget_amount"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Budget Amount Value -->
        <TextView
            android:id="@+id/budget_amount_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:text="@string/enter_budget_amount"
            android:textSize="14sp" />

        <!-- Start Date Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="4dp"
            android:text="@string/start_date"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- Start Date Value -->
        <TextView
            android:id="@+id/budget_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:text="@string/enter_start_date"
            android:textSize="14sp" />

        <!-- End Date Label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="4dp"
            android:text="@string/end_date"
            android:textSize="16sp"
            android:textStyle="bold" />

        <!-- End Date Value -->
        <TextView
            android:id="@+id/budget_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_end_date" />

        <!-- Buttons for Edit, Delete -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="end"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_edit_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit" />

            <Button
                android:id="@+id/button_delete_budget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/delete" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
